--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Login</h1>
 <div>
-    <a href="/oauth2/authorization/github">Login with GitHub</a>
+    <a href="/oauth2/authorization/google">Login with Google</a>
 </div>
 </body>
 </html>
